--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <head>
 	<meta charset="utf-8">
-
+	<link rel="stylesheet" href="css/index.css">
 	<title>Sprint Challenge - Home</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
@@ -15,14 +15,24 @@
 	<div>
 		<!-- header -->
 		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
+			<div class="transbox">
+				<a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
+
 
 				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
+				<nav>
+					<div class="nav">
+						<a href="menu.html">Menu</a>
+						<a href="">Reservations</a>
+						<a href="">Special Offers</a>
+						<a href="">Contact</a>
+					</div>
+					<div class="social">
+						<a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook" name="facebook"></i></a>
+						<a href="https://www.twitter.com"><i class="fa-brands fa-square-twitter" name="twitter"></i></a>
+						<a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram" name="instagram"></i></a>
+					</div>
+				</nav>
 			</div>
 		</header>
 
@@ -31,24 +41,24 @@
 			<div>
 				<h2>OUR FOOD</h2>
 
-				img/food-avocadotoast.jpg
+				<img src="img/food-avocadotoast.jpg" alt="">
 
-				img/food-burger.jpg
+				<img src="img/food-burger.jpg" alt="">
 
-				img/food-poutine.jpg
+				<img src="img/food-poutine.jpg" alt="">
 
-				img/food-ribs.jpg
+				<img src="img/food-ribs.jpg" alt="">
 
-				img/food-sandwich.jpg
+				<img src="img/food-sandwich.jpg" alt="">
 
-				img/food-sausage.jpg
+				<img src="img/food-sausage.jpg" alt="">
 
-				img/food-steak.jpg
+				<img src="img/food-steak.jpg" alt="">
 
-				img/food-tacos.jpg
+				<img src="img/food-tacos.jpg" alt="">
 
-				img/food-wings.jpg
-			</div>
+				<img src="img/food-wings.jpg" alt="">
+			</div> 
 		</section>
 
 		<!-- spacer -->
@@ -126,12 +136,16 @@
 		<footer>
 			<!-- email signup -->
 			Join our mailing list!
-			Sign Up
+            <input type="text" placeholder="Email Address">
+            <button>Sign Up</button>
+
 			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
+			 <nav>
+            <a href="menu.html">Menu</a> 
+            <a href="">Reservations</a> 
+            <a href="">Special Offers</a> 
+            <a href="">Contact</a>
+            </nav>
 			<!-- copyright -->
 			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
 		</footer>
