index fully functional

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- gallery section -->
 		<section class="gallery">
-			<div>
+			
 				<h2>OUR FOOD</h2>
 
 				<img src="img/food-avocadotoast.jpg" alt="">
@@ -58,7 +58,7 @@
 				<img src="img/food-tacos.jpg" alt="">
 
 				<img src="img/food-wings.jpg" alt="">
-			</div> 
+			 
 		</section>
 
 		<!-- spacer -->
@@ -134,20 +134,26 @@
 
 		<!-- footer -->
 		<footer>
+			<div class="end">
 			<!-- email signup -->
+			<div class="email">
 			Join our mailing list!
-            <input type="text" placeholder="Email Address">
-            <button>Sign Up</button>
+            <input type="text" placeholder="Email Address" style="height:60px; width:450px; font-size:xx-large;">
+            <button style="height:60px; width:170px;"> Sign Up</button>
+			</div>
 
 			<!-- nav -->
-			 <nav>
+			 <nav class="ftr">
             <a href="menu.html">Menu</a> 
             <a href="">Reservations</a> 
             <a href="">Special Offers</a> 
             <a href="">Contact</a>
             </nav>
+			</div>
 			<!-- copyright -->
+			<div class="copyright">
 			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+			</div>
 		</footer>
 	</div>
 </body>
