--- a/menu.html
+++ b/menu.html
@@ -15,22 +15,24 @@
     <div>
         <!-- header -->
         <header>
-            <a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
+            <div class="transbox">
+                <a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
 
             <!-- nav -->
-            <nav>
-                <div class="nav">
-                <a href="menu.html">Menu</a>
-                <a href="">Reservations</a>
-                <a href="">Special Offers</a>
-                <a href="">Contact</a>
-                </div>
-                <div class="social">
-                    <a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook" name="facebook"></i></a>
-                    <a href="https://www.twitter.com"><i class="fa-brands fa-square-twitter" name="twitter"></i></a>
-                    <a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram" name="instagram"></i></a>
-                </div>
-            </nav>
+                <nav>
+                    <div class="nav">
+                    <a href="menu.html">Menu</a>
+                    <a href="">Reservations</a>
+                    <a href="">Special Offers</a>
+                    <a href="">Contact</a>
+                    </div>
+                    <div class="social">
+                        <a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook" name="facebook"></i></a>
+                        <a href="https://www.twitter.com"><i class="fa-brands fa-square-twitter" name="twitter"></i></a>
+                        <a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram" name="instagram"></i></a>
+                    </div>
+                </nav>
+            </div>
         </header>
 
         <!-- spacer -->
