--- a/menu.html
+++ b/menu.html
@@ -21,10 +21,10 @@
             <!-- nav -->
                 <nav>
                     <div class="nav">
-                    <a href="menu.html">Menu</a>
-                    <a href="">Reservations</a>
-                    <a href="">Special Offers</a>
-                    <a href="">Contact</a>
+                        <a href="menu.html">Menu</a>
+                        <a href="">Reservations</a>
+                        <a href="">Special Offers</a>
+                        <a href="">Contact</a>
                     </div>
                     <div class="social">
                         <a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook" name="facebook"></i></a>
@@ -41,7 +41,7 @@
         <!-- menu -->
         <article class="menu">
             <div class="menu-container">
-            <h2>Food & Drink</h2>
+            <div class="topper"><h2>Food & Drink</h2></div>
                 <div class="menu-section">
                     <h3>Drinks</h3>
                     
