index mobile completed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- header -->
 		<header>
 			<div class="transbox">
-				<a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
+				<div class="anger"><a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a></div>
 
 
 				<!-- nav -->
@@ -136,23 +136,23 @@
 		<footer>
 			<div class="end">
 			<!-- email signup -->
-			<div class="email">
-			Join our mailing list!
-            <input type="text" placeholder="Email Address" style="height:60px; width:450px; font-size:xx-large;">
-            <button style="height:60px; width:170px;"> Sign Up</button>
-			</div>
+				<div class="email">
+					Join our mailing list!
+					<input type="text" placeholder="Email Address" class="input">
+					<button class="button"> Sign Up</button>
+				</div>
 
-			<!-- nav -->
-			 <nav class="ftr">
-            <a href="menu.html">Menu</a> 
-            <a href="">Reservations</a> 
-            <a href="">Special Offers</a> 
-            <a href="">Contact</a>
-            </nav>
+				<!-- nav -->
+				<nav class="ftr">
+					<a href="menu.html">Menu</a> 
+					<a href="">Reservations</a> 
+					<a href="">Special Offers</a> 
+					<a href="">Contact</a>
+				</nav>
 			</div>
 			<!-- copyright -->
 			<div class="copyright">
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+				©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
 			</div>
 		</footer>
 	</div>
