--- a/menu.html
+++ b/menu.html
@@ -179,21 +179,27 @@
 
         <!-- footer -->
         <footer>
-            <!-- email signup -->
-            Join our mailing list!
-            <input type="text" placeholder="Email Address">
-            <button>Sign Up</button>
-            
-            <!-- nav -->
-            <nav>
+			<div class="end">
+			<!-- email signup -->
+			<div class="email">
+			Join our mailing list!
+            <input type="text" placeholder="Email Address" style="height:60px; width:450px; font-size:xx-large;">
+            <button style="height:60px; width:170px;"> Sign Up</button>
+			</div>
+
+			<!-- nav -->
+			 <nav class="ftr">
             <a href="menu.html">Menu</a> 
             <a href="">Reservations</a> 
             <a href="">Special Offers</a> 
             <a href="">Contact</a>
             </nav>
-            <!-- copyright -->
-            ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-        </footer>
+			</div>
+			<!-- copyright -->
+			<div class="copyright">
+			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+			</div>
+		</footer>
     </div>
 </body>
 
